src/test/examples/invalid/semanticErr/extension/class/unknownClassAttribute.wacc
# class attributes does not exist

# Exit:
# 200

# Program:

begin
  class H is 
    private int v 
    public K() is 
      k = 1
    end
  end
  int i = 0 
end